top, top, top! 25 artefactos más dificiles de fragata

--- a/Fragateando2.ipynb
+++ b/Fragateando2.ipynb
@@ -1167,8 +1167,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bf2359cb-ccfb-47db-810c-a5ba17b25fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TOP 25 ARTEFACTOS BLOQUEANTES ===\n",
+      "   Identificador (C-P-A)  Total Reintentos Fallidos\n",
+      "0             C1-P13.0-2                      10587\n",
+      "1              C0-P6.0-4                       8995\n",
+      "2             C1-P18.0-7                       8135\n",
+      "3              C1-P8.0-6                       7691\n",
+      "4              C0-P6.0-2                       7558\n",
+      "5             C1-P17.0-6                       7158\n",
+      "6             C1-P30.1-3                       6875\n",
+      "7             C1-P12.0-4                       6713\n",
+      "8             C0-P2.1-10                       6701\n",
+      "9              C0-P1.1-1                       6165\n",
+      "10            C1-P25.0-8                       6097\n",
+      "11             C0-P6.0-3                       5972\n",
+      "12             C1-P2.0-2                       5926\n",
+      "13             C0-P6.0-6                       5884\n",
+      "14            C1-P18.0-8                       5601\n",
+      "15            C1-P17.0-1                       5535\n",
+      "16            C1-P26.0-1                       5433\n",
+      "17            C1-P29.0-8                       5378\n",
+      "18             C0-P5.0-5                       5334\n",
+      "19            C1-P22.0-3                       5308\n",
+      "20             C0-P2.1-6                       5219\n",
+      "21            C1-P11.0-3                       5071\n",
+      "22             C0-P6.0-5                       4936\n",
+      "23             C0-P2.0-4                       4875\n",
+      "24            C1-P29.0-9                       4769\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Filtrar solo los intentos fallidos\n",
+    "only_failures = droped_df[droped_df['validationArtifact'] == False]\n",
+    "\n",
+    "# 2. Contar cuántas veces falló cada usuario en cada artefacto específico\n",
+    "user_fail_counts = only_failures.groupby(['chapter', 'page', 'artifact', '_idUser']).size().reset_index(name='fail_count')\n",
+    "\n",
+    "# 3. Calcular \"Reintentos Fallidos\" (Cualquier fallo después del primero)\n",
+    "# Si falló 3 veces: 1er intento (error) + 2 reintentos (errores) -> Valor = 2\n",
+    "user_fail_counts['failed_retries'] = user_fail_counts['fail_count'] - 1\n",
+    "\n",
+    "# Filtrar para dejar solo aquellos donde hubo persistencia en el error\n",
+    "blocking_events = user_fail_counts[user_fail_counts['failed_retries'] > 0]\n",
+    "\n",
+    "# 4. Agrupar por artefacto para obtener el puntaje total de bloqueo\n",
+    "top_blocking = blocking_events.groupby(['chapter', 'page', 'artifact'])['failed_retries'].sum().reset_index()\n",
+    "\n",
+    "# Crear etiqueta legible\n",
+    "top_blocking['Artefacto_ID'] = (\n",
+    "    \"C\" + top_blocking['chapter'].astype(str) + \n",
+    "    \"-P\" + top_blocking['page'].astype(str) + \n",
+    "    \"-\" + top_blocking['artifact'].astype(str)\n",
+    ")\n",
+    "\n",
+    "# 5. Ordenar de mayor a menor bloqueo y tomar los top 25\n",
+    "top_25_blocking = top_blocking.sort_values(by='failed_retries', ascending=False).head(25)\n",
+    "\n",
+    "# Limpiar la tabla para mostrar\n",
+    "final_list = top_25_blocking[['Artefacto_ID', 'failed_retries']].reset_index(drop=True)\n",
+    "final_list.columns = ['Identificador (C-P-A)', 'Total Reintentos Fallidos']\n",
+    "\n",
+    "# Mostrar la lista\n",
+    "print(\"=== TOP 25 ARTEFACTOS BLOQUEANTES ===\")\n",
+    "print(final_list)\n",
+    "\n",
+    "# Opcional: Si quieres exportarlo a CSV para revisarlo luego\n",
+    "# final_list.to_csv('top_25_bloqueantes.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2196cab9-57a5-4e88-8e18-ae3cf2fd29cf",
    "metadata": {},
    "outputs": [],
    "source": []
